Remove global remapper