@@ -117,8 +117,8 @@ public class ParameterComparisonTest {
         System.out.println("Insertions:");
         diff.insertions().forEach(param -> System.out.println("AT " + param.getFirst() + " TYPE " + param.getSecond()));
         assertEquals(1, diff.insertions().size());
-        assertEquals(9, diff.insertions().get(0).getFirst());
-        assertEquals(Type.FLOAT_TYPE, diff.insertions().get(0).getSecond());
+        assertEquals(9, diff.insertions().getFirst().getFirst());
+        assertEquals(Type.FLOAT_TYPE, diff.insertions().getFirst().getSecond());
 
         System.out.println("Replacements:");
         diff.replacements().forEach(param -> System.out.println("AT " + param.getFirst() + " TYPE " + param.getSecond()));
